--- a/Frontend/src/app/listagem/listagem.component.html
+++ b/Frontend/src/app/listagem/listagem.component.html
@@ -1,7 +1,7 @@
 
 <div class="col-md-8 offset-md-2">
   <br/>
-  <table id="table" class="table table-striped table-bordered" style="height: 100px;width:100%">
+  <table id="table" class="table table-striped table-bordered" style="height: 100px;width:100%" *ngIf="listaCidades.length > 0">
       <thead>
           <tr>
               <th>Título Tarefa</th>
@@ -45,3 +45,7 @@
           </tr>
       </tfoot>
   </table>
+  <div *ngIf="listaCidades.length == 0">
+      <app-empty-state></app-empty-state>
+  </div>
+</div>
